--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=pgsql
 DB_HOST=ec2-54-173-77-184.compute-1.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=d7pdoukb06ej4m
